# svseq

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  LICENSE  Pipfile  README.md  TODO.txt  engine.py  launchpad.py  main.py  model.py  padget.py  project.py  pyproject.toml  sunvox.py  svseq.sunvox
app/: __init__.py  app.py  controller.py  mixer.py  notes.py  pattern.py  project.py  session.py  state.py  tempo.py
audio/: CMakeLists.txt  setup.py
audio/src/: AudioEngine.cpp  AudioEngine.hpp  AudioPlatform.cpp  AudioPlatform.hpp  audio_engine.cpp
instruments/: .gitignore
ui/: app.py  chords.py  controller.py  mixer.py  notes.py  padget.py  pattern.py  session.py  tempo.py
